src/main/k8s/monolith-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolith-service
spec:
  type: NodePort
  selector:
    app: spring-boot3-monolith
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
