src/main/k8s/monolith-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: monolith-ingress
spec:
  defaultBackend:
    service:
      name: spring-boot3-monolith
      port:
        number: 8080
